added img and first connect

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "bloc-frontend-project-starter",
+  "name": "Connect Two",
   "version": "0.0.2",
-  "description": "Starter project for the Bloc Frontend Web Development",
+  "description": "A uniqure version of Connect Four",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bloc/bloc-frontend-project-starter"
+    "url": "https://github.com/pjtpjtpjtpjt/ConnectTwo.git"
   },
   "main": "server.js",
   "scripts": {
